fixing budget grid columns alignment

--- a/exp_web_2/src/Components/MonthlyBudgetGrid/MonthlyBudgetGrid.css
+++ b/exp_web_2/src/Components/MonthlyBudgetGrid/MonthlyBudgetGrid.css
@@ -46,6 +46,11 @@
 .budget-month-col {
     display: none;
 }
+
+.budget-current-month-col{
+    display: block;
+}
+
 @media (min-width: 640px) {
     .budget-month-col {
         display: block;
